# seoul_opendata

./: .gitignore  README.md  firebase_test.py  main.py  pyproject.toml  setup.py
seoul_opendata/firebase/: controller.py
seoul_opendata/models/: __init__.py  article.py  child.py  child_school.py  establish_type.py  facility.py  location.py  payloads.py  playloads.py  tiletable.py  user.py
seoul_opendata/routes/: __init__.py  article_route.py  base.py  child_route.py  child_school_route.py  user_route.py
seoul_opendata/seoul_openapi/: __init__.py  client.py
seoul_opendata/utils/: dateutils.py  location_utils.py
